Fix vertical code highlight alignment.

--- a/docs/.vuepress/theme/styles/code.pcss
+++ b/docs/.vuepress/theme/styles/code.pcss
@@ -72,7 +72,8 @@ div[class*="language-"] {
   background-color: var(--code-bg-color);
 
   .highlight-lines {
-    @apply pt-3 absolute select-none top-0 left-0 w-full leading-snug z-0;
+    @apply absolute select-none top-0 left-0 w-full leading-snug z-0;
+    padding-top: 0.865rem;
 
     .highlighted {
       background-color: var(--code-highlight-color);
